Initial commit with Python code and R script

--- a/Salary Function.ipynb
+++ b/Salary Function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 14,
    "id": "65c91cf9-66cb-4b51-bdda-477110eadc35",
    "metadata": {},
    "outputs": [
@@ -15,9 +15,7 @@
     }
    ],
    "source": [
-    "# Import required libraries\n",
     "import pandas as pd\n",
-    "\n",
     "# Define the file path\n",
     "\n",
     "file_path = '/Users/toluwalopenejo/Documents/Nexford University/salary_data.csv'\n",
@@ -37,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "id": "7124af40-5f8b-44a7-9862-bab82ca7009a",
    "metadata": {},
    "outputs": [],
@@ -58,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 22,
    "id": "1c41b9d4-1dd5-48ab-a794-2098af696fcd",
    "metadata": {},
    "outputs": [
@@ -71,16 +69,16 @@
     }
    ],
    "source": [
-    "# Convert to dictionary\n",
+    " # Convert the DataFrame to a dictionary (list of dictionaries)\n",
     "salary_dict = salary_data.to_dict(orient='records')\n",
     "\n",
-    "# Example: Access details of the first employee\n",
+    "# Access and print details of the first employee (first dictionary in the list)\n",
     "print(salary_dict[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 24,
    "id": "95502e0a-efde-4979-894d-216f6acbdb4e",
    "metadata": {},
    "outputs": [],
@@ -100,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 26,
    "id": "1f31f449-462f-4093-9a68-eea3aa44605e",
    "metadata": {},
    "outputs": [
@@ -140,43 +138,6 @@
     "        print(f\"An error occurred: {e}\")\n",
     "\n",
     "export_employee_details('ALBERT PARDINI') "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8ab3672-d0b6-4270-b01f-a7b6b14f25b9",
-   "metadata": {},
-   "source": [
-    "# Salary Data Analysis and Processing\n",
-    "\n",
-    "This project involves importing salary data, processing it using Python, implementing error handling, exporting specific employee details, and using R for additional operations. Below are the details of each step and the corresponding code implementation.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## **1. Import Data**\n",
-    "\n",
-    "### **Description**\n",
-    "This step imports the salary data into a Pandas DataFrame. It includes error handling to ensure the file exists, is non-empty, and can be parsed correctly.\n",
-    "\n",
-    "### **Code**\n",
-    "```python\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Define file path\n",
-    "file_path = 'salary_data.csv'\n",
-    "\n",
-    "# Load data with error handling\n",
-    "try:\n",
-    "    salary_data = pd.read_csv(file_path, low_memory=False)\n",
-    "    print(\"Data imported successfully!\")\n",
-    "except FileNotFoundError:\n",
-    "    print(\"Error: The file was not found.\")\n",
-    "except pd.errors.EmptyDataError:\n",
-    "    print(\"Error: The file is empty.\")\n",
-    "except pd.errors.ParserError:\n",
-    "    print(\"Error: There was an issue parsing the file.\")\n",
-    "except Exception as e:\n",
-    "    print(f\"An unexpected error occurred: {e}\")\n"
    ]
   }
  ],
